# ITMO_OSLab2

./: .gitignore  CMakeLists.txt
Source/: COMMENTS
Source/Kernel/: Makefile  main.c
Source/Kernel/stats/: cpustats.c  cpustats.h
Source/User/: Makefile  Proto.c  main.c
Test/: Makefile  magister.c
